compiler/kernc_cli/tests/soundness/run-pass/supertraits/generic_assoc_supertrait_method_substitutes_assoc_args.rn
// exit: 0

trait Base[T] {
    fn make() T;
};

trait Derived: Base[Apply[i32]] {
    type Apply[T];
};

struct Id {};

impl &Id: Base[i32] {
    fn make() i32 {
        return 7;
    }
}

impl &Id: Derived {
    type Apply[T] = T;
}

fn main() i32 {
    let id = Id.{};
    let derived = &Derived.{ id.& };
    return derived.make() - 7;
}
